--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "@polka/parse": "1.0.0-next.8",
     "@polka/send": "1.0.0-next.7",
     "compression": "^1.7.4",
+    "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "ley": "^0.5.0",
     "node-fetch": "^2.6.1",
     "polka": "1.0.0-next.11",
     "ramda": "^0.27.1",
+    "session-file-store": "^1.4.0",
     "sirv": "^1.0.6",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
+    "uuid": "^8.3.0",
     "yeahjs": "^0.2.0"
   },
   "devDependencies": {
