--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@polka/parse": "1.0.0-next.8",
     "@polka/send": "1.0.0-next.7",
     "compression": "^1.7.4",
+    "cookie": "^0.4.1",
     "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "node-fetch": "^2.6.1",
