--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "debug": "node inspect run.js",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
-    "build:client": "esbuild --bundle src/client/list.js --outfile=src/static/app/list.min.js --minify"
+    "build:client": "esbuild --bundle src/client/list.js --outfile=src/static/app/list.min.js --minify",
+    "watch:client": "watchexec -w src/client/ \"npm run build:client\""
   },
   "dependencies": {
     "@lukeed/uuid": "^2.0.0",
@@ -18,7 +19,6 @@
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "hyperapp": "^2.0.8",
-    "list": "^2.0.19",
     "microh": "^0.1.0",
     "node-fetch": "^2.6.1",
     "polka": "1.0.0-next.11",
