--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "etto": "^1.0.0",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
+    "httpie": "^2.0.0-next.12",
     "hyperapp": "^2.0.8",
+    "jty": "^3.0.1",
     "mergerino": "^0.4.0",
     "microh": "^0.1.0",
     "node-fetch": "^2.6.1",
