--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "type": "module",
   "scripts": {
     "run": "node run.js",
-    "dev": "node-dev run.js",
+    "dev": "node watch.js",
     "debug": "node inspect run.js",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
     "client:build": "esbuild --bundle src/client/list.js --outfile=src/static/app/list.js --minify",
-    "client:watch": "watchexec -w src/client/ \"esbuild --bundle --sourcemap src/client/list.js --outfile=src/static/app/list.js\""
+    "client:dev": "watchexec -w src/client/ \"esbuild --bundle --sourcemap src/client/list.js --outfile=src/static/app/list.js\""
   },
   "dependencies": {
     "@lukeed/uuid": "^2.0.0",
@@ -24,7 +24,6 @@
     "jty": "^3.0.1",
     "mergerino": "^0.4.0",
     "microh": "^0.1.0",
-    "node-fetch": "^2.6.1",
     "polka": "1.0.0-next.11",
     "session-file-store": "^1.4.0",
     "sirv": "^1.0.6",
@@ -34,6 +33,6 @@
   },
   "devDependencies": {
     "esbuild": "^0.8.17",
-    "node-dev": "^5.2.0"
+    "node-watch": "^0.7.0"
   }
 }
