--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "polka": "1.0.0-next.11",
     "session-file-store": "^1.4.0",
     "sirv": "^1.0.6",
+    "sortablejs": "^1.13.0",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
     "yeahjs": "^0.2.0"
