--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "httpie": "^2.0.0-next.13",
-    "hyperapp": "^2.0.8",
+    "hyperapp": "^2.0.12",
     "mergerino": "^0.4.0",
     "microh": "^0.1.0",
-    "polka": "1.0.0-next.11",
+    "polka": "^1.0.0-next.11",
     "session-file-store": "^1.4.0",
     "sirv": "^1.0.6",
     "sortablejs": "^1.13.0",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
-    "yeahjs": "^0.2.0"
+    "yeahjs": "^0.3.0"
   },
   "devDependencies": {
-    "esbuild": "^0.8.17",
-    "node-watch": "^0.7.0"
+    "esbuild": "^0.8.36",
+    "node-watch": "^0.7.1"
   }
 }
