--- a/package.json
+++ b/package.json
@@ -14,22 +14,26 @@
     "@lukeed/uuid": "^2.0.0",
     "@polka/parse": "1.0.0-next.8",
     "@polka/send": "1.0.0-next.7",
+    "classcat": "^5.0.1",
     "compression": "^1.7.4",
     "cookie": "^0.4.1",
     "etto": "^1.3.0",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "howlongtobeat": "^1.3.0",
+    "html5sortable": "^0.10.0",
     "httpie": "^2.0.0-next.13",
     "hyperapp": "^2.0.12",
     "mergerino": "^0.4.0",
     "microh": "^0.1.0",
     "polka": "^1.0.0-next.11",
+    "preact": "^10.5.12",
     "session-file-store": "^1.5.0",
     "sirv": "^1.0.6",
     "sortablejs": "^1.13.0",
     "sqlite": "^4.0.14",
     "sqlite3": "^5.0.0",
+    "unistore": "^3.5.2",
     "yeahjs": "^0.3.0"
   },
   "devDependencies": {
