--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@lukeed/uuid": "^2.0.0",
     "@polka/parse": "1.0.0-next.8",
     "@polka/send": "1.0.0-next.7",
-    "classcat": "^5.0.1",
     "compression": "^1.7.4",
     "cookie": "^0.4.1",
     "etto": "^1.3.0",
@@ -23,9 +22,8 @@
     "howlongtobeat": "^1.3.0",
     "html5sortable": "^0.10.0",
     "httpie": "^2.0.0-next.13",
-    "hyperapp": "^2.0.12",
-    "mergerino": "^0.4.0",
     "microh": "^0.1.0",
+    "obj-str": "^1.0.3",
     "polka": "^1.0.0-next.11",
     "preact": "^10.5.12",
     "session-file-store": "^1.5.0",
@@ -37,7 +35,7 @@
     "yeahjs": "^0.3.0"
   },
   "devDependencies": {
-    "esbuild": "^0.8.36",
+    "esbuild": "^0.8.50",
     "node-watch": "^0.7.1"
   }
 }
