--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@polka/send": "1.0.0-next.7",
     "compression": "^1.7.4",
     "cookie": "^0.4.1",
+    "env-smart": "^2.2.0",
     "etto": "^1.6.4",
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
