--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
+  "name": "backlog",
   "license": "MIT",
   "type": "module",
+  "version": "0.1.0",
   "engines": {
     "node": ">=14.16.x",
     "npm": ">=6.14.x"
